# offscreen_render

./: CMakeLists.txt  README.md  catkin.cmake  manifest.xml  package.xml  setup.py
include/offscreen_render/: CloudGenerator.h  Conversions.h  Geometry.h  OffscreenRenderer.h  ROSCamera.h  RaveArmTracker.h  RaveBridge.h  RaveCamera.h  RaveCamera2ROS.h  RaveObjectTracker.h  Shader.h  VertexBuffer.h
script/: frames.gv  offscreen.py
shaders/: ColorFragmentShader.glsl  FragmentShader.glsl  VertexShader.glsl
src/: __init__.py
src/offscreen_render/: CloudGenerator.cpp  GLObject.py  OffscreenRenderer.cpp  OffscreenRenderer.py  Plugin.cpp  ROSCamera.cpp  RaveArmTracker.cpp  RaveCamera.cpp  RaveCamera2ROS.cpp  RaveCameraPlugin.cpp  RaveObjectTracker.cpp  Shader.cpp  VertexBuffer.cpp  __init__.py  icp.py  interface_wrapper.py  parse_intrinsics.py  ros_camera_bridge.py  ros_camera_sim.py  test_cpp.cpp  test_herbpy.py  test_opengl.py  test_openrave.py  transforms.py
src/offscreen_render/examples/: advanced.py  occlusion_checker.py
