<?xml version="1.0"?>
<package>
  <name>offscreen_render</name>
  <version>0.0.1</version>
  <description>
    Python wrappers for rendering openrave bodies offscreen
  </description>
  <url type="repository">https://github.com/personalrobotics/offscreen_render</url>
  <maintainer email="mklingen@andrew.cmu.edu">Matt Klingensmith</maintainer>
  <author email="mklingen@andrew.cmu.edu">Matt Klingensmith</author>
  <license>UNRELEASED</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
