<?xml version="1.0"?>
<package>
  <name>offscreen_render</name>
  <version>0.0.1</version>
  <description>
    Python wrappers for rendering openrave bodies offscreen
  </description>
  <url type="repository">https://github.com/personalrobotics/offscreen_render</url>
  <maintainer email="mklingen@andrew.cmu.edu">Matt Klingensmith</maintainer>
  <author email="mklingen@andrew.cmu.edu">Matt Klingensmith</author>
  <license>UNRELEASED</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_runtime</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>image_transport</build_depend>
</package>
